--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,16 +5,16 @@
   <div class="col">
     <!-- SearchBox -->
     <shared-search-box
-    (onValue)="searchByCapital($event)"
-    placeholder="Buscar por capital"></shared-search-box>
+    [initialValue]="initialValue"
+    (onDebounce)="searchByCapital($event)"
+    placeholder="Buscar por capital" ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
-    <ul>
+      <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
       <countries-table [countries]="countries"></countries-table>
-    </ul>
   </div>
 </div>
