--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,7 +5,8 @@
   <div class="col">
     <!-- SearchBox -->
     <shared-search-box
-    (onValue)="searchCountry($event)"
+    [initialValue]="initialValue"
+    (onDebounce)="searchCountry($event)"
     placeholder="Buscar por pais"></shared-search-box>
   </div>
 </div>
