--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -37,13 +37,13 @@
       <h3> Traducciones:</h3>
       <div class="d-flex flex-wrap">
 
-        <span class="badge bg-primary m-1"> {{ country.translations['ara']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['deu']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['hun']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['fra']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['por']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['swe']?.common}}</span>
-        <span class="badge bg-primary m-1"> {{ country.translations['srp']?.common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['ara'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['deu'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['hun'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['fra'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['por'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['swe'].common}}</span>
+        <span class="badge bg-primary m-1"> {{ country.translations['srp'].common}}</span>
       </div>
     </div>
   </div>
