--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,5 +1,9 @@
+<!-- (keyup.enter)="emitValue(txtInput.value)" -->
 <input
   type="text"
   [placeholder]="placeholder"
-  (keyup.enter)="emitValue(txtInput.value)"
-  class="form-control" #txtInput>
+  class="form-control"
+  [value]="initialValue"
+  (keyup)="onKeyPress (txtInput.value)"
+  #txtInput
+>
